# image-generator-server-client

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependency.cmake
include/async/: TimerThread.h  threadsafe_queue.h
include/resource/: config.hpp
sendrecieveapp/: CMakeLists.txt
sendrecieveapp/common/: CMakeLists.txt  config.cpp
sendrecieveapp/reciever/: CMakeLists.txt  main.cpp
sendrecieveapp/reciever/reciever_gui/: recivermainwindow.cpp  recivermainwindow.h  recivermainwindow.ui
sendrecieveapp/sender/: CMakeLists.txt  Connection.cpp  Server.cpp  TimerThread.cpp  main.cpp
sendrecieveapp/sender/include/: Connection.h  Server.h  TimerThread.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  TimerThread.cpp  config.cpp
src/image-generator/: CMakeLists.txt  Connection.cpp  Server.cpp  TimerThread.cpp  main.cpp
src/image-generator/include/: Connection.h  Server.h  TimerThread.h
src/qt-viewreciever/: CMakeLists.txt  main.cpp
src/qt-viewreciever/gui/: recivermainwindow.cpp  recivermainwindow.h  recivermainwindow.ui
